fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 input {
+    height: 40%;
     width: 100%;
-    height: 50%;
     padding: 20px;
-    font-size: 30px;
+    font-size: 12px;
     border: none;
     box-sizing: border-box;
     white-space: normal;
     background: #e4e4e4;
     letter-spacing: 1.2;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
 }
 
 body {
@@ -15,8 +19,9 @@ body {
     padding: 0;
     line-height: 1.6;
     color: #333;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -42,14 +47,19 @@ body {
 }
 
 .simple-keyboard {
-    overflow: scroll;
-    padding: 0;
+    /* overflow: hidden; */
+    padding: 5px;
+    /* overflow-y: auto; */
+    /* overflow-x: hidden; */
+    position: absolute;
+    /* transform: rotate(-90deg); */
+    /* transform-origin: right top; */
 }
 
 .simple-keyboard.hg-theme-ios.hg-theme-default .hg-row .hg-button {
     flex-grow: 1;
     cursor: pointer;
-    max-width: initial;
+    /* max-width: initial; */
     /* justify-content: center; */
     /* align-items: center; */
     /* width: 100%; */
@@ -94,11 +104,11 @@ body {
     justify-content: center;
     box-shadow: none;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 16px;
     /* max-width: 150px; */
     /* min-width: 150px; */
-    min-width: 120px;
-    height: 100px;
+    min-width: 70px;
+    height: 60px;
     /* min-height: 90px; */
 }
 
@@ -131,4 +141,8 @@ body {
 .simple-keyboard.hg-theme-ios.hg-theme-default .hg-button-back {
     min-width: 80px;
     max-width: 80px;
+}
+
+.hg-theme-default, .simple-keyboard.hg-theme-ios {
+    width: fit-content;
 }
